added new icons, added help screen and creative commons attribution text

--- a/ToDo
+++ b/ToDo
@@ -4,6 +4,10 @@ Link is: <div>Icons made by <a href="http://www.freepik.com" title="Freepik">Fre
 
 <div>Icons made by <a href="https://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>get information popups working
 
+app icon <a href="https://www.freepik.com/free-photos-vectors/phone">Phone vector created by Freepik</a>
+blue icon <a href='https://www.freepik.com/free-vector/contact-icons-in-3d_831811.htm'>Designed by Layerace</a>
+yellow icon <a href="https://www.freepik.com/free-vector/yellow-phone-icon_810130.htm">Designed by Kreativkolors</a>
+
 finished:
 got button helper class started
 displaying the information based on what key is pressed
